added registration banner pop-up

--- a/index.html
+++ b/index.html
@@ -55,11 +55,6 @@
       <li class="nav-item">
         <a class="nav-link" href="faq/index.html">FAQ</a>
       </li>
-      <!--
-      <li class="nav-item">
-        <a class="nav-link" href="staff/index.html">Staff</a>
-      </li>
-      -->
       <li class="nav-item">
         <a class="nav-link" href="schedule/index.html">Schedule</a>
       </li>
@@ -75,17 +70,6 @@
         <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
-        <!-- <div class="dropdown">
-          <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Register
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" target="__blank" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage">Register</a>
-            <a class="dropdown-item" href="reg/test.html">Test</a>
-            <a class="dropdown-item" href="reg/linkhub.html">Link Hub</a>
-          </div>
-        </div> -->
-        <!-- <a class="btn btn-outline-primary" href="https://worldaffarisregistration.github.io/#/" data-proofer-ignore>Register</a> -->
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
       </li>
     </ul>
@@ -94,11 +78,12 @@
 
 
 
-<!-- <div class="container">
-      <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2020! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+<div class="container" color="red">
+      <div class="alert bg-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert">&times;</button> <!-- Makes the banner closeable -->
+        Registration is <b>LIVE</b>. Check the button in the navbar!
       </div>
-</div> -->
+</div>
 
 
  <div class="index-welcome">
@@ -134,22 +119,6 @@
     </div>
   </div>
 
-  <!--<div class="card card-body mt-3">
-      <div class="row">
-        <div class="col-sm-6">
-          <img class="img-fluid rounded" src="img/speakers/jhansen.jpg" alt="James Hansen"/>
-        </div>
-        <div class="col-sm-6">
-          <h3>Featured Speaker</h3>
-          <h4>James Hansen, Keynote Address</h4>
-          <p>
-            Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes.
-
-          </p>
-        </div>
-      </div>
-  </div>
-</div>-->
     <div class="container mt-3">
       <div class="card card-body">
         <h2 class="text-center">WAC Promotional Video</h2>
