--- a/team/index.html
+++ b/team/index.html
@@ -136,7 +136,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Catherine Zhou"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/czhou.jpg" alt="Catherine Zhou"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Catherine Zhou</h4>
@@ -574,7 +574,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Sofia Suleman"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/ssuleman.jpg" alt="Sofia Suleman"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Sofia Suleman</h4>
