--- a/team/index.html
+++ b/team/index.html
@@ -558,7 +558,7 @@
             <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Christine Cai"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/ccai.jpg" alt="Christine Cai"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Christine Cai</h4>
