centered banner text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 <div class="container" color="red">
-      <div class="alert bg-danger" role="alert">
+      <div class="alert bg-danger text-center" role="alert">
         <button type="button" class="close" data-dismiss="alert">&times;</button> <!-- Makes the banner closeable -->
         Registration is <b>LIVE</b>. Check the button in the navbar!
       </div>
