--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -112,10 +112,10 @@
          <hr>
         <div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jivey.png" alt="Janet Ivey">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jpayette.png" alt="Julie Payette">
 					</div>
 					<div class="col-md-8">
-            <h2 class="text-center text-md-left">Janet Ivey</h2>
+            <h2 class="text-center text-md-left">Julie Payette</h2>
             Bio coming soon...
 					</div>
         </div>
