banner telling viewer to make their schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -70,11 +70,12 @@
 </nav>
 
 
-    <!--<div class="container">
-      <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
-      </div>
-    </div>-->
+<div class="container" color="red">
+  <div class="alert bg-danger text-center" role="alert">
+    <button type="button" class="close" data-dismiss="alert">&times;</button> <!-- Makes the banner closeable -->
+    Scroll down to make your own <b>personal</b> schedule with links to the webinars!
+  </div>
+</div>
 
       <div class="container">
   <div class="card card-body">
