🗣Update plenary speakers

--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -120,12 +120,12 @@
           <tbody>
             <tr>
               <td>Commercial Spaceflight: Humanity's Next Steps</td>
-              <td>Dr. Louis Friedman | Janet Ivey</td>
+              <td>Dr. Louis Friedman | Julie Payette</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white" onclick="setVal(1);">Select</a></td>
             </tr>
             <tr>
               <td>Social Justice: Our History and Future</td>
-              <td>Ajani Charles | Janet Ivey</td>
+              <td>Ajani Charles | Mehrdad Baghai</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white text-white" onclick="setVal(2);">Select</a></td>
             </tr>
             <tr>
