--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -210,8 +210,7 @@
       			document.getElementById("loading").style.display = "none"
       		})
       		.catch(err=>{
-      			console.log(err)
-      			//window.location.href = './lookup.html'
+      			window.location.href = './lookup.html'
       		})
       	}
     </script>
