🔗add links to plenary selection

--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -119,22 +119,22 @@
           </thead>
           <tbody>
             <tr>
-              <td>Commercial Spaceflight: Humanity's Next Steps</td>
+              <td><a href="https://worldaffairs.ucc.on.ca/plenaries/space.html">Commercial Spaceflight: Humanity's Next Steps</a></td>
               <td>Dr. Louis Friedman | Julie Payette</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white" onclick="setVal(1);">Select</a></td>
             </tr>
             <tr>
-              <td>Social Justice: Our History and Future</td>
+              <td><a href="https://worldaffairs.ucc.on.ca/plenaries/justice.html">Social Justice: Our History and Future</a></td>
               <td>Ajani Charles | Mehrdad Baghai</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white text-white" onclick="setVal(2);">Select</a></td>
             </tr>
             <tr>
-              <td>Social Media: We are the Product</td>
+              <td><a href="https://worldaffairs.ucc.on.ca/plenaries/media.html">Social Media: We are the Product</a></td>
               <td>David Carroll | the Social Dilemma Film crew</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white" onclick="setVal(3);">Select</a></td>
             </tr>
             <tr>
-              <td>Businesses in COVID: Sink or Swim</td>
+              <td><a href="https://worldaffairs.ucc.on.ca/plenaries/business.html">Businesses in COVID: Sink or Swim</a></td>
               <td>Bharat Masrani | Opher Baron</td>
               <td><a data-toggle="modal" data-target="#confirmation" class="btn btn-primary btn-sm text-white" onclick="setVal(4);">Select</a></td>
             </tr>
