--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -105,10 +105,18 @@
           <li class="nav-item">
             <a class="nav-link" href="../contact/index.html">Contact</a>
           </li>
+          <li>
+            <a class="nav-link" href="../team/index.html">Team</a>
+          </li>
         </ul>
         <ul class="navbar-nav float-lg-right">
           <li class="nav-item mr-2">
-			<a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
+            <a
+              class="btn btn-outline-danger"
+              href="../wacathon/index.html"
+              data-proofer-ignore
+              >SPRINT</a
+            >
           </li>
           <li class="nav-item">
             <a
@@ -122,97 +130,106 @@
       </div>
     </nav>
     <script>
-      	function getWebInfo(url){
-      		const id = url.split("/")[4]
-      		switch(id){
-				  		//Justice
-      					case "5622721457331564558":
-						  return({
-								  title:"Social Justice: Our History and Future",
-								  speaker:"Ajani Charles | Janet Ivey",
-							  })
-      						break;
-						//Space
-      					case "6176775262172081932":
-						  return({
-								  title:"Commercial Spaceflight: Humanity's Next Steps",
-								  speaker:"Dr. Louis Friedman | Janet Ivey",
-							  })
-      						break;
-						//Social Media
-      					case "9051817848899910158":
-						  return({
-								  title:"Social Media: We are the Product",
-								  speaker:"David Carroll | the Social Dilemma Film crew",
-							  })
-							  break;
-						//COVID
-      					case "8379658903024252430":
-						  return({
-								  title:"Businesses in COVID: Sink or Swim",
-								  speaker:"Bharat Masrani | Opher Baron",
-							  })
-      						break;
-      				}
-      	}
-
-      	function getCookie(name) {
-          var nameEQ = name + "=";
-          var ca = document.cookie.split(';');
-          for(var i=0;i < ca.length;i++) {
-              var c = ca[i];
-              while (c.charAt(0)==' ') c = c.substring(1,c.length);
-              if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-          }
-          return null;
+      function getWebInfo(url) {
+        const id = url.split("/")[4];
+        switch (id) {
+          //Justice
+          case "5622721457331564558":
+            return {
+              title: "Social Justice: Our History and Future",
+              speaker: "Ajani Charles | Janet Ivey",
+            };
+            break;
+          //Space
+          case "6176775262172081932":
+            return {
+              title: "Commercial Spaceflight: Humanity's Next Steps",
+              speaker: "Dr. Louis Friedman | Janet Ivey",
+            };
+            break;
+          //Social Media
+          case "9051817848899910158":
+            return {
+              title: "Social Media: We are the Product",
+              speaker: "David Carroll | the Social Dilemma Film crew",
+            };
+            break;
+          //COVID
+          case "8379658903024252430":
+            return {
+              title: "Businesses in COVID: Sink or Swim",
+              speaker: "Bharat Masrani | Opher Baron",
+            };
+            break;
+        }
       }
 
-      	if(getCookie("token") == null){
-      		window.location.href = './lookup.html'
-      	}else{
-      	var tr = ""
-      	fetch(`https://us-central1-wac2021-d98f6.cloudfunctions.net/verifyToken?token=${getCookie("token")}`)
-      		.then((resp,err)=>{
-      			return(resp.json())
-      		}).then(json=>{
-      			const name = json.firstName +" "+json.lastName
-      			const main = json.main
-      			var p1 = json.p1
-      			var p2 = json.p2
-      			if(p1 == "N/A"){
-      				document.getElementById("p1").innerText = "Select"
-      				document.getElementById("p1").classList = "btn btn-primary btn-sm"
-      				document.getElementById("p1").href = "./plenary.html?v=1"
-      			}else{
-					const info = getWebInfo(p1)
-					document.getElementById("p1t").innerText = info.title
-					document.getElementById("p1s").innerText = info.speaker
-      				document.getElementById("p1").href = p1
-      			}
+      function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(";");
+        for (var i = 0; i < ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == " ") c = c.substring(1, c.length);
+          if (c.indexOf(nameEQ) == 0)
+            return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+      }
 
-      			if(p2 == "N/A"){
-      				document.getElementById("p2").innerText = "Select"
-      				document.getElementById("p2").classList = "btn btn-primary btn-sm"
-      				document.getElementById("p2").href = "./plenary.html?v=2"
-      			}else{
-					const info = getWebInfo(p2)
-					document.getElementById("p2t").innerText = info.title
-					document.getElementById("p2s").innerText = info.speaker
-      				document.getElementById("p2").href = p2
-      			}
+      if (getCookie("token") == null) {
+        window.location.href = "./lookup.html";
+      } else {
+        var tr = "";
+        fetch(
+          `https://us-central1-wac2021-d98f6.cloudfunctions.net/verifyToken?token=${getCookie(
+            "token"
+          )}`
+        )
+          .then((resp, err) => {
+            return resp.json();
+          })
+          .then((json) => {
+            const name = json.firstName + " " + json.lastName;
+            const main = json.main;
+            var p1 = json.p1;
+            var p2 = json.p2;
+            if (p1 == "N/A") {
+              document.getElementById("p1").innerText = "Select";
+              document.getElementById("p1").classList =
+                "btn btn-primary btn-sm";
+              document.getElementById("p1").href = "./plenary.html?v=1";
+            } else {
+              const info = getWebInfo(p1);
+              document.getElementById("p1t").innerText = info.title;
+              document.getElementById("p1s").innerText = info.speaker;
+              document.getElementById("p1").href = p1;
+            }
 
-      			const mains = document.getElementsByClassName("main")
-      			for (const element of mains){
-      				element.href = main
-      			}
+            if (p2 == "N/A") {
+              document.getElementById("p2").innerText = "Select";
+              document.getElementById("p2").classList =
+                "btn btn-primary btn-sm";
+              document.getElementById("p2").href = "./plenary.html?v=2";
+            } else {
+              const info = getWebInfo(p2);
+              document.getElementById("p2t").innerText = info.title;
+              document.getElementById("p2s").innerText = info.speaker;
+              document.getElementById("p2").href = p2;
+            }
 
-      			document.getElementById("greeting").innerText="Welcome Back: "+name;
-      			document.getElementById("loading").style.display = "none"
-      		})
-      		.catch(err=>{
-      			window.location.href = './lookup.html'
-      		})
-      	}
+            const mains = document.getElementsByClassName("main");
+            for (const element of mains) {
+              element.href = main;
+            }
+
+            document.getElementById("greeting").innerText =
+              "Welcome Back: " + name;
+            document.getElementById("loading").style.display = "none";
+          })
+          .catch((err) => {
+            window.location.href = "./lookup.html";
+          });
+      }
     </script>
     <div class="flex-vertical">
       <div></div>
@@ -235,49 +252,71 @@
                 <tr>
                   <td>9:00-9:40</td>
                   <td>Event Opening</td>
-                  <td><a class="main text-white btn btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a class="main text-white btn btn-secondary btn-sm">Join</a>
+                  </td>
                   <td>Lauren M.| Krishna B.| Andrew C.</td>
                 </tr>
                 <tr>
                   <td>9:45-10:10</td>
                   <td id="p1t">Plenary 1</td>
-                  <td><a id="p1" class="btn text-white btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a id="p1" class="btn text-white btn-secondary btn-sm"
+                      >Join</a
+                    >
+                  </td>
                   <td id="p1s">TBD</td>
                 </tr>
                 <tr>
                   <td>10:15-10:35</td>
                   <td>Networking Rooms</td>
-                  <td><a class="btn text-white btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a class="btn text-white btn-secondary btn-sm">Join</a>
+                  </td>
                   <td>N/A</td>
                 </tr>
                 <tr>
                   <td>10:40-11:05</td>
                   <td id="p2t">Plenary 2</td>
-                  <td><a id="p2" class="btn text-white btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a id="p2" class="btn text-white btn-secondary btn-sm"
+                      >Join</a
+                    >
+                  </td>
                   <td id="p2s">TBD</td>
                 </tr>
                 <tr>
                   <td>11:10-11:40</td>
                   <td>Startup Exhibition</td>
-                  <td><a class="btn text-white btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a class="btn text-white btn-secondary btn-sm">Join</a>
+                  </td>
                   <td>N/A</td>
                 </tr>
                 <tr>
                   <td>11:40-12:25</td>
                   <td>Keynote Speaker</td>
-                  <td><a class="btn text-white btn-secondary btn-sm main" href="#">Join</a></td>
+                  <td>
+                    <a class="btn text-white btn-secondary btn-sm main" href="#"
+                      >Join</a
+                    >
+                  </td>
                   <td>TBD</td>
                 </tr>
                 <tr>
                   <td>11:25-12:55</td>
                   <td>Networking Rooms</td>
-                  <td><a class="text-white btn btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a class="text-white btn btn-secondary btn-sm">Join</a>
+                  </td>
                   <td>N/A</td>
                 </tr>
                 <tr>
                   <td>13:00-13:45</td>
                   <td>Closing Panel</td>
-                  <td><a class="main text-white btn btn-secondary btn-sm">Join</a></td>
+                  <td>
+                    <a class="main text-white btn btn-secondary btn-sm">Join</a>
+                  </td>
                   <td>Eva & Allen Lau | Krishna B.| Lauren M.</td>
                 </tr>
               </tbody>
@@ -287,8 +326,11 @@
           <p>
             Please <a href="../contact/">contact us</a> if you have any issues
             or would like to change your plenary selection.
-		  </p>
-		  <p>Please wait a couple of seconds for the selections to take effect on your schedule</p>
+          </p>
+          <p>
+            Please wait a couple of seconds for the selections to take effect on
+            your schedule
+          </p>
         </div>
       </div>
 
