📷 Team picture for jding

--- a/team/index.html
+++ b/team/index.html
@@ -609,7 +609,7 @@
             <div class="col">
                 <div class="row mt-4 mb-4">
                   <div class="col-sm-4">
-                    <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Jefferson Ding"/>
+                    <img class="img-fluid rounded-circle" src="../img/staff/jding.jpg" alt="Jefferson Ding"/>
                   </div>
                   <div class="col-sm-8">
                     <h4 class="card-title">Jefferson Ding</h4>
