--- a/team/index.html
+++ b/team/index.html
@@ -384,7 +384,7 @@
             <div class="col">
               <div class="row mt-4 mb-4">
                 <div class="col-sm-4">
-                  <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Sophie Shepherd"/>
+                  <img class="img-fluid rounded-circle" src="../img/staff/sshepherd.jpg" alt="Sophie Shepherd"/>
                 </div>
                 <div class="col-sm-8">
                   <h4 class="card-title">Sophie Shepherd</h4>
@@ -775,7 +775,7 @@
                 <div class="col">
                     <div class="row mt-4 mb-4">
                       <div class="col-sm-4">
-                        <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Izza Ahmed"/>
+                        <img class="img-fluid rounded-circle" src="../img/staff/iahmed.jpg" alt="Izza Ahmed"/>
                       </div>
                       <div class="col-sm-8">
                         <h4 class="card-title">Izza Ahmed</h4>
@@ -860,7 +860,7 @@
                     <div class="col">
                         <div class="row mt-4 mb-4">
                           <div class="col-sm-4">
-                            <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Bella Rusaw"/>
+                            <img class="img-fluid rounded-circle" src="../img/staff/brusaw.jpg" alt="Bella Rusaw"/>
                           </div>
                           <div class="col-sm-8">
                             <h4 class="card-title">Bella Rusaw</h4>
