--- a/team/index.html
+++ b/team/index.html
@@ -470,7 +470,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Annie Kypreos"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/akypreos.jpg" alt="Annie Kypreos"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Annie Kypreos</h4>
@@ -640,7 +640,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Angela Luo"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/aluo.jpg" alt="Angela Luo"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Angela Luo</h4>
@@ -760,7 +760,7 @@
                 <div class="col">
                     <div class="row mt-4 mb-4">
                       <div class="col-sm-4">
-                        <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Jamie Mann"/>
+                        <img class="img-fluid rounded-circle" src="../img/staff/jmann.jpg" alt="Jamie Mann"/>
                       </div>
                       <div class="col-sm-8">
                         <h4 class="card-title">Jamie Mann</h4>
