updated speaker blurbs

--- a/plenaries/business.html
+++ b/plenaries/business.html
@@ -107,7 +107,10 @@
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Bharat Masrani</h2>			
-                        Bio coming soon... 
+              Bharat Masrani was appointed Group President and Chief Executive Officer of TD Bank Group on November 1, 2014. Bharat has more than 30 years of banking experience and is a member of the TD Bank Group Board of Directors. He most recently served as Chief Operating Officer for TD Bank Group from July 2013.
+              Bharat has held many senior executive roles across the bank. In 2006, he became the President of TD Banknorth, and in 2007, President and CEO. In 2008, he was named Group Head U.S. Personal and Commercial Banking and President and CEO of TD Bank, America’s Most Convenient Bank®. Previous to his role at TD Bank, he served as Vice Chair and Chief Risk Officer of TD Bank Group, a position he held from May 2003. Bharat also served as Senior Vice President and Chief Executive Officer of TD Waterhouse Investor Services in Europe; Senior Vice President, Corporate Finance and Co-Head in Europe; Vice President and Country Head for India; and Vice President and Head, Corporate Banking Canada. He began his banking career with TD Bank Group in 1987 as a Commercial Lending Trainee.
+              Bharat received a Bachelor of Administrative Studies degree with Honours from York University in 1978 and obtained his Master of Business Administration from the Schulich School of Business, York University in 1979. For his achievements in business and the community, Bharat was awarded an honorary Doctor of Laws degree from the Schulich School of Business in 2017. Bharat also serves on the Board of Trustees for The Hospital for Sick Children in Toronto.
+            
           </div>
         </div>
         <hr>
