--- a/plenaries/justice.html
+++ b/plenaries/justice.html
@@ -130,7 +130,7 @@
 					</div>
 					<div class="col-md-8">
 						<h2 class="text-center text-md-left">Mehrdad Baghai</h2>			
-            Bio coming soon...
+               Mehrdad is co-founder, Chairman and CEO of High Resolves, a social venture which he co-founded with his wife Roya in 2005. High Resolves is the leader in the design and delivery of immersive learning experiences on citizenship for young people. Mehrdad is also the Chairman of Alchemy Growth, a boutique strategy advisory firm advising large companies on their growth strategies. He specializes in disruptive strategy and designing organization architectures for rapid growth. He is an active investor in both the technology and private equity space. Mehrdad has been a frequent lecturer on management theory especially in the growth strategy domain. He is co-author of the New York Times and Wall Street Journal bestseller As One as well as international bestsellers The Alchemy of Growth and Granularity. He was formerly a partner at McKinsey & Company where he co-led the worldwide Growth Practice. Mehrdad served a three-year term as an Executive Director of CSIRO, Australia’s national science agency, with overarching responsibility for growth, investment and commercialization. Mehrdad received a B.S.E. with highest honors from Princeton, an M.P.P. as a Kennedy Fellow at Harvard’s Kennedy School of Government and a J.D. with high honors at Harvard Law School. Mehrdad is a Crown Fellow and winner of the John P. McNulty Prize at the Aspen Institute.
 
 					</div>
 				</div>
