--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -116,7 +116,7 @@
 					</div>
 					<div class="col-md-8">
             <h2 class="text-center text-md-left">Julie Payette</h2>
-            Bio coming soon...
+            Julie Payette is the 29th Governor General of Canada (appointed by Prime Minister Trudeau in 2017), and a former astronaut, engineer, and jet pilot. She received a bachelor’s degree in electrical engineering from McGill University in Montreal in 1986 and a master’s degree in computer engineering from the University of Toronto in 1990. Following her education in June 1992, Payette was selected from 5,330 applicants as one of four astronauts by the Canadian Space Agency. Julie Payette originally worked as a robotic manipulator for the International Space Station (ISS) that later became known as Canadarm2. In February 1996, she even qualified as a military jet captain at the Canadian Air Force Base in Moose Jaw, Saskatchewan on the CT-114 Tutor “Snowbird” jet aircraft. Continuing her pursuit of space, after intensive training in the NASA Johnson Space Center in Houston, Texas, she participated in two space flights to the International Space Station (ISS), STS-96 (10 day mission in 1999) and STS-127 (16 day mission in 2009), and served as the chief astronaut for the Canadian Space Agency from 2000 to 2007. In 1999, she became the first Canadian to board the International Space Station. Payette is currently acclaimed as an intelligent female trail blazer that not only converses in six different languages, but has more importantly made significant contributions to Canadian space exploration. 
 					</div>
         </div>
       </div>
