--- a/team/index.html
+++ b/team/index.html
@@ -88,7 +88,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Krishna Bambawale"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/krbambawale.jpg" alt="Krishna Bambawale"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Krishna Bambawale</h4>
