--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="card card-body mt-3 mx-3">
     <div class="row">
       <div class="col-sm-3">
-        <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
+        <img class="img-fluid" src="img/wac_logo1.png" alt="WAC Logo"/>
       </div>
       <div class="col-sm-9">
         <h4>What's WAC?</h4>
