--- a/team/index.html
+++ b/team/index.html
@@ -205,7 +205,7 @@
         <div class="col">
           <div class="row mt-4 mb-4">
             <div class="col-sm-4">
-              <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="Sloan Sobie"/>
+              <img class="img-fluid rounded-circle" src="../img/staff/ssobie.jpg" alt="Sloan Sobie"/>
             </div>
             <div class="col-sm-8">
               <h4 class="card-title">Sloan Sobie</h4>
