--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,174 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="The World Affairs Conference">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="author" content="The World Affairs Conference" />
 
-  <title>WAC Schedule | The World Affairs Conference</title>
-  <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
+    <title>WAC Schedule | The World Affairs Conference</title>
+    <meta
+      name="description"
+      content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth."
+    />
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
-  <script src="../js/google_analytics.js"></script>
-  <script defer src="../js/fontawesome-all.min.js"></script>
-  <style>
-		body{
-			background-image:url("../img/earth.png"),url("../img/stars.png");
-			background-repeat:no-repeat;
-		}
-	</style>
-</head>
-
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/img/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../img/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../img/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../js/google_analytics.js"></script>
+    <script defer src="../js/fontawesome-all.min.js"></script>
+    <style>
+      body {
+        background-image: url("../img/earth.png"), url("../img/stars.png");
+        background-repeat: no-repeat;
+      }
+    </style>
+  </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a class="navbar-brand" href="../index.html"
+        ><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="../keynote/index.html">Keynote</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../addresses/index.html">Addresses</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../faq/index.html">FAQ</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../contact/index.html">Contact</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../team/index.html">Team</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav float-lg-right">
-      <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../keynote/index.html">Keynote</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../addresses/index.html">Addresses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../faq/index.html">FAQ</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="../schedule/index.html">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contact/index.html">Contact</a>
+          </li>
+          <li>
+            <a class="nav-link" href="../team/index.html">Team</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav float-lg-right">
+          <li class="nav-item mr-2">
+            <a
+              class="btn btn-outline-danger"
+              href="../wacathon/index.html"
+              data-proofer-ignore
+              >SPRINT</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="btn btn-outline-primary"
+              href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage"
+              data-proofer-ignore
+              >Register</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-
-<div class="container" color="red">
-  <div class="alert bg-danger text-center" role="alert">
-    <button type="button" class="close" data-dismiss="alert">&times;</button> <!-- Makes the banner closeable -->
-    Scroll down to make your own <b>personal</b> schedule with links to the webinars!
-  </div>
-</div>
-
-      <div class="container">
-  <div class="card card-body">
-    <h1 class="text-center">WAC Regular Stream</h1>
-    <h2 class="text-center">Febuary 6th, Conference Day</h2>
-    <h4 class="text-center">Note: All times listed are in EST.</h4>
-    <div class="table-responsive">
-      <table class="table table-hover my-4">
-    	  <thead class="thead-dark">
-    	    <tr>
-    	      <th>Event</th>
-    	      <th>Time</th>
-    	      <th>Location</th>
-    	    </tr>
-    	  </thead>
-    	  <tbody>
-    	    <tr>
-              <td><a href="../addresses/index.html">Opening Address</a></td>
-    	      <td>9:00 to 9:40am</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-    	    <tr>
-    	      <td><a href="../plenaries/index.html">Plenary #1</a></td>
-    	      <td>9:45 to 10:10am</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-    	    <tr>
-    	      <td>Networking (Optional)</td>
-    	      <td>10:15 to 10:35am</td>
-    	      <td>Zoom</td>
-    	    </tr>
-    	    <tr>
-    	      <td><a href="../plenaries/index.html">Plenary #2</a></td>
-    	      <td>10:40 to 11:05am</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-    	    <tr>
-    	      <td>Startup Exhibition &amp; Lunch (Optional)</td>
-    	      <td>11:10 to 11:40am</td>
-    	      <td>Zoom</td>
-    	    </tr>
-    	    <tr>
-    	      <td><a href="../keynote/index.html">Keynote Speaker</a></td>
-    	      <td>11:45 to 12:25pm</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-    	    <tr>
-            <td>Networking (Optional)</td>
-    	      <td>12:25 to 12:55pm</td>
-    	      <td>Zoom</td>
-    	    </tr>
-            <tr>
-    	      <td><a href="../addresses/index.html">Closing Address</a></td>
-    	      <td>1:00 to 1:40pm</td>
-    	      <td>GoToWebinar</td>
-    	    </tr>
-            <tr>
-    	      <td>Dismissal</td>
-    	      <td>1:45pm</td>
-    	      <td></td>
-    	    </tr>
-    	  </tbody>
-    	</table>
+    <div class="container" color="red">
+      <div class="alert bg-danger text-center" role="alert">
+        <button type="button" class="close" data-dismiss="alert">
+          &times;
+        </button>
+        <!-- Makes the banner closeable -->
+        Scroll down to make your own <b>personal</b> schedule with links to the
+        webinars!
+      </div>
     </div>
 
-    <a href="../reg/linkhub.html" style="width: 100%;">
-      <button class="btn btn-primary" style="width: 100%;">Webinar Links</button>
-    </a>
-  </div>
-</div>
+    <div class="container">
+      <div class="card card-body">
+        <h1 class="text-center">WAC Regular Stream</h1>
+        <h2 class="text-center">Febuary 6th, Conference Day</h2>
+        <h4 class="text-center">Note: All times listed are in EST.</h4>
+        <div class="table-responsive">
+          <table class="table table-hover my-4">
+            <thead class="thead-dark">
+              <tr>
+                <th>Event</th>
+                <th>Time</th>
+                <th>Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="../addresses/index.html">Opening Address</a></td>
+                <td>9:00 to 9:40am</td>
+                <td>GoToWebinar</td>
+              </tr>
+              <tr>
+                <td><a href="../plenaries/index.html">Plenary #1</a></td>
+                <td>9:45 to 10:35am</td>
+                <td>GoToWebinar</td>
+              </tr>
+              <tr>
+                <td>Networking (Optional)</td>
+                <td>10:40 to 10:35am</td>
+                <td>Zoom</td>
+              </tr>
+              <tr>
+                <td><a href="../plenaries/index.html">Plenary #2</a></td>
+                <td>10:40 to 11:05am</td>
+                <td>GoToWebinar</td>
+              </tr>
+              <tr>
+                <td>Startup Exhibition &amp; Lunch (Optional)</td>
+                <td>11:10 to 11:40am</td>
+                <td>Zoom</td>
+              </tr>
+              <tr>
+                <td><a href="../keynote/index.html">Keynote Speaker</a></td>
+                <td>11:45 to 12:25pm</td>
+                <td>GoToWebinar</td>
+              </tr>
+              <tr>
+                <td>Networking (Optional)</td>
+                <td>12:25 to 12:55pm</td>
+                <td>Zoom</td>
+              </tr>
+              <tr>
+                <td><a href="../addresses/index.html">Closing Address</a></td>
+                <td>1:00 to 1:40pm</td>
+                <td>GoToWebinar</td>
+              </tr>
+              <tr>
+                <td>Dismissal</td>
+                <td>1:45pm</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-
+        <a href="../reg/linkhub.html" style="width: 100%">
+          <button class="btn btn-primary" style="width: 100%">
+            Webinar Links
+          </button>
+        </a>
+      </div>
+    </div>
 
     <footer class="footer text-center mt-3">
-  <div class="container">
-    <p>
-      The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
-    </p>
-    <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
-    </p>
-    <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
-    <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
-    <a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
-    <a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
-    <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
-  </div>
-</footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js"></script>
-
-
+      <div class="container">
+        <p>
+          The World Affairs Conference website, made by the
+          <a
+            class="white-icon"
+            style="text-decoration: underline"
+            href="https://github.com/worldaffairsconference"
+            target="_blank"
+            >WAC team</a
+          >
+          with <span class="fa fa-heart" style="color: red"></span> and
+          <a
+            href="https://github.com/worldaffairsconference/world.ac"
+            style="color: inherit"
+            ><span class="fab fa-github"></span
+          ></a>
+        </p>
+        <p>
+          Have any questions or concerns? Check out
+          <a
+            class="white-icon"
+            href="../faq/index.html"
+            style="text-decoration: underline"
+            >our FAQ</a
+          >
+          or
+          <a
+            class="white-icon"
+            href="../contact/index.html"
+            style="text-decoration: underline"
+            >get in touch with us!</a
+          >
+        </p>
+        <a href="mailto:wac@ucc.on.ca"
+          ><span class="fa fa-fw fa-2x fa-envelope white-icon"></span
+        ></a>
+        <a href="https://www.facebook.com/worldaffairsconference/"
+          ><span class="fab fa-fw fa-2x fa-facebook white-icon"></span
+        ></a>
+        <a href="https://instagram.com/WorldAffairsCon"
+          ><span class="fab fa-fw fa-2x fa-instagram white-icon"></span
+        ></a>
+        <a href="https://twitter.com/WorldAffairsCon"
+          ><span class="fab fa-fw fa-2x fa-twitter white-icon"></span
+        ></a>
+        <a href="https://github.com/worldaffairsconference/world.ac"
+          ><span class="fab fa-fw fa-2x fa-github white-icon"></span
+        ></a>
+      </div>
+    </footer>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/tether.min.js"></script>
   </body>
-
 </html>
