💹Update wacathin => sprint

--- a/plenaries/business.html
+++ b/plenaries/business.html
@@ -68,7 +68,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="wacathon/index.html" data-proofer-ignore>SPRINT</a>
+        <a class="btn btn-outline-danger" href="sprint/index.html" data-proofer-ignore>SPRINT</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
