--- a/reg/linkhub.html
+++ b/reg/linkhub.html
@@ -113,7 +113,7 @@
           <li class="nav-item mr-2">
             <a
               class="btn btn-outline-danger"
-              href="../wacathon/index.html"
+              href="../sprint/index.html"
               data-proofer-ignore
               >SPRINT</a
             >
