--- a/addresses/index.html
+++ b/addresses/index.html
@@ -1,149 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="The World Affairs Conference">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="author" content="The World Affairs Conference" />
 
-  <title>Addresses | The World Affairs Conference</title>
-  <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
+    <title>Addresses | The World Affairs Conference</title>
+    <meta
+      name="description"
+      content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth."
+    />
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
-  <script src="../js/google_analytics.js"></script>
-  <script defer src="../js/fontawesome-all.min.js"></script>
-  <style>
-		body{
-			background-image:url("../img/earth.png"),url("../img/stars.png");
-			background-repeat:no-repeat;
-		}
-	</style>
-</head>
-
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../img/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../img/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../img/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../js/google_analytics.js"></script>
+    <script defer src="../js/fontawesome-all.min.js"></script>
+    <style>
+      body {
+        background-image: url("../img/earth.png"), url("../img/stars.png");
+        background-repeat: no-repeat;
+      }
+    </style>
+  </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+      <a class="navbar-brand" href="../index.html"
+        ><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="../keynote/index.html">Keynote</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="../addresses/index.html">Addresses</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../faq/index.html">FAQ</a>
-      </li>
-      <!--
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="../keynote/index.html">Keynote</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="../addresses/index.html">Addresses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../faq/index.html">FAQ</a>
+          </li>
+          <!--
       <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       -->
-      <li class="nav-item">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../contact/index.html">Contact</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../team/index.html">Team</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav float-lg-right">
-      <li class="nav-item mr-2">
-        <a class="btn btn-outline-danger" href="../wacathon/index.html" data-proofer-ignore>SPRINT</a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage" data-proofer-ignore>Register</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+          <li class="nav-item">
+            <a class="nav-link" href="../schedule/index.html">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contact/index.html">Contact</a>
+          </li>
+          <li>
+            <a class="nav-link" href="../team/index.html">Team</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav float-lg-right">
+          <li class="nav-item mr-2">
+            <a
+              class="btn btn-outline-danger"
+              href="../sprint/index.html"
+              data-proofer-ignore
+              >SPRINT</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="btn btn-outline-primary"
+              href="https://register.gotowebinar.com/register/6122619915197970701?source=WebPage"
+              data-proofer-ignore
+              >Register</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <div class="container">
-        <div class="card card-body mb-5">
-            <h1 class="text-center">Opening Address:</h1>
-          
-            <p class = "text-center">
+      <div class="card card-body mb-5">
+        <h1 class="text-center">Opening Address:</h1>
 
+        <p class="text-center"></p>
+        <hr />
 
-            </p>
-            <hr>
-
-            <div class="row">
-                <div class="col">
-                    <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/achisholm.png" alt="Andrew Chisholm"/>
-                    <h2 class="text-center">Andrew Chisholm</h2>
-                    <h4 class="text-center">Corporate Director of RBC</h4>
-                    <p>
-                        Bio coming soon...
-
-                    </p>
-                </div>
-            </div>
+        <div class="row">
+          <div class="col">
+            <img
+              class="img-fluid d-block mx-auto my-2 img-half rounded"
+              src="../img/speakers/achisholm.png"
+              alt="Andrew Chisholm"
+            />
+            <h2 class="text-center">Andrew Chisholm</h2>
+            <h4 class="text-center">Corporate Director of RBC</h4>
+            <p>Bio coming soon...</p>
+          </div>
         </div>
       </div>
+    </div>
 
-        <div class="container">
-            <div class="card card-body mb-5">
-                <h1 class="text-center">Closing Address: </h1>
-                <p class = "text-center">
-                     
-                </p>
-                <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/alau.png" alt="Allen Lau"/>
-                <h2 class="text-center">Allen Lau</h2>
-                <h4 class="text-center">Co-founder and CEO of Wattpad</h4>
-                <p>
-                Bio coming soon...
-                </p>
+    <div class="container">
+      <div class="card card-body mb-5">
+        <h1 class="text-center">Closing Address:</h1>
+        <p class="text-center"></p>
+        <hr />
+        <img
+          class="img-fluid d-block mx-auto my-2 img-half rounded"
+          src="../img/speakers/alau.png"
+          alt="Allen Lau"
+        />
+        <h2 class="text-center">Allen Lau</h2>
+        <h4 class="text-center">Co-founder and CEO of Wattpad</h4>
+        <p>Bio coming soon...</p>
 
-                <hr>
-                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/elau.png" alt="Eva Lau"/>
-                <h2 class="text-center">Eva Lau</h2>
-                <h4 class="text-center">Co-founder and CEO of Two Small Fish</h4>
-                <p>
-                Bio coming soon...
-                </p>
-            </div>
-        </div>
-
-
+        <hr />
+        <img
+          class="img-fluid d-block mx-auto my-2 img-half rounded"
+          src="../img/speakers/elau.png"
+          alt="Eva Lau"
+        />
+        <h2 class="text-center">Eva Lau</h2>
+        <h4 class="text-center">Co-founder and CEO of Two Small Fish</h4>
+        <p>Bio coming soon...</p>
+      </div>
+    </div>
 
     <footer class="footer text-center mt-3">
-  <div class="container">
-    <p>
-      The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
-    </p>
-    <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="/contact/" style="text-decoration:underline;">get in touch with us!</a>
-    </p>
-    <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
-    <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
-    <a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
-    <a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
-    <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
-  </div>
-</footer>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js"></script>
-
-
+      <div class="container">
+        <p>
+          The World Affairs Conference website, made by the
+          <a
+            class="white-icon"
+            style="text-decoration: underline"
+            href="https://github.com/worldaffairsconference"
+            target="_blank"
+            >WAC team</a
+          >
+          with <span class="fa fa-heart" style="color: red"></span> and
+          <a
+            href="https://github.com/worldaffairsconference/world.ac"
+            style="color: inherit"
+            ><span class="fab fa-github"></span
+          ></a>
+        </p>
+        <p>
+          Have any questions or concerns? Check out
+          <a class="white-icon" href="/faq/" style="text-decoration: underline"
+            >our FAQ</a
+          >
+          or
+          <a
+            class="white-icon"
+            href="/contact/"
+            style="text-decoration: underline"
+            >get in touch with us!</a
+          >
+        </p>
+        <a href="mailto:wac@ucc.on.ca"
+          ><span class="fa fa-fw fa-2x fa-envelope white-icon"></span
+        ></a>
+        <a href="https://www.facebook.com/worldaffairsconference/"
+          ><span class="fab fa-fw fa-2x fa-facebook white-icon"></span
+        ></a>
+        <a href="https://instagram.com/WorldAffairsCon"
+          ><span class="fab fa-fw fa-2x fa-instagram white-icon"></span
+        ></a>
+        <a href="https://twitter.com/WorldAffairsCon"
+          ><span class="fab fa-fw fa-2x fa-twitter white-icon"></span
+        ></a>
+        <a href="https://github.com/worldaffairsconference/world.ac"
+          ><span class="fab fa-fw fa-2x fa-github white-icon"></span
+        ></a>
+      </div>
+    </footer>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/tether.min.js"></script>
   </body>
-
 </html>
