🦀 Julie Payette is gone 🦀

--- a/plenaries/space.html
+++ b/plenaries/space.html
@@ -98,7 +98,7 @@
 			</div>
             
 			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
+				<h1 class="text-center">Speaker</h1>
                 <hr>
 				<div class="row pb-2">
 					<div class="col-md-4">
@@ -109,16 +109,6 @@
 						Dr. Louis Friedman is an emeritus executive director and Co-Founder of the Planetary Society, a non-profit organization driven to promote research and discoveries in a variety of fields relating to astronomy, planetary science, and space exploration. As a vital contributor to the space science community for over 30 years, Dr. Friedman has had a wealth of experience as he continues to guide humanity’s journey into the solar system. He earned his M.S in Engineering Mechanics at Cornell University (1963) and a Ph.D. attending the Aeronautics and Astronauts Department at M.I.T. (1971) where he developed a thesis on Extracting Scientific Information from Spacecraft Tracking Data. Additionally, he has worked extensively at the Jet Propulsion Laboratory for 10 years (1970-80), the AVCO Space Systems Division for 5 years (1963-68), and has had an accomplished history as a AIAA Congressional Fellow where he continues to testify American congress to advance issues concerning space and technological exploration. As an author of multiple books on Solar Sails; Interplanetary Flight; and Spaceflight to Mars, Dr. Friedman continues to make strong contributions to the space science community as the co-leader of the Asteroid Redirect Mission program.
 					</div>
 				</div>
-         <hr>
-        <div class="row pb-2">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jpayette.png" alt="Julie Payette">
-					</div>
-					<div class="col-md-8">
-            <h2 class="text-center text-md-left">Julie Payette</h2>
-            Julie Payette is the 29th Governor General of Canada (appointed by Prime Minister Trudeau in 2017), and a former astronaut, engineer, and jet pilot. She received a bachelor’s degree in electrical engineering from McGill University in Montreal in 1986 and a master’s degree in computer engineering from the University of Toronto in 1990. Following her education in June 1992, Payette was selected from 5,330 applicants as one of four astronauts by the Canadian Space Agency. Julie Payette originally worked as a robotic manipulator for the International Space Station (ISS) that later became known as Canadarm2. In February 1996, she even qualified as a military jet captain at the Canadian Air Force Base in Moose Jaw, Saskatchewan on the CT-114 Tutor “Snowbird” jet aircraft. Continuing her pursuit of space, after intensive training in the NASA Johnson Space Center in Houston, Texas, she participated in two space flights to the International Space Station (ISS), STS-96 (10 day mission in 1999) and STS-127 (16 day mission in 2009), and served as the chief astronaut for the Canadian Space Agency from 2000 to 2007. In 1999, she became the first Canadian to board the International Space Station. Payette is currently acclaimed as an intelligent female trail blazer that not only converses in six different languages, but has more importantly made significant contributions to Canadian space exploration. 
-					</div>
-        </div>
       </div>
 
 
