--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -202,7 +202,7 @@
                       >Commercial Spaceflight: Humanity's Next Steps</a
                     >
                   </td>
-                  <td>Dr. Louis Friedman | Julie Payette</td>
+                  <td>Dr. Louis Friedman</td>
                   <td>
                     <a
                       data-toggle="modal"
@@ -342,14 +342,14 @@
             case 2:
               return {
                 title: "Social Justice: Our History and Future",
-                speaker: "Ajani Charles | Janet Ivey",
+                speaker: "Ajani Charles | Mehrdad Baghai",
               };
               break;
             //Space
             case 1:
               return {
                 title: "Commercial Spaceflight: Humanity's Next Steps",
-                speaker: "Dr. Louis Friedman | Janet Ivey",
+                speaker: "Dr. Louis Friedman",
               };
               break;
             //Social Media
