--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -64,6 +64,32 @@
   </head>
 
   <body>
+    <script>
+      function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(";");
+        for (var i = 0; i < ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == " ") c = c.substring(1, c.length);
+          if (c.indexOf(nameEQ) == 0)
+            return c.substring(nameEQ.length, c.length);
+        }
+        return null;
+      }
+
+      if (getCookie("token") == null) {
+        window.location.href = "./lookup.html";
+      } else {
+        var tr = "";
+        fetch(
+          `https://us-central1-wac2021-d98f6.cloudfunctions.net/verifyToken?token=${getCookie(
+            "token"
+          )}`
+        ).catch((err) => {
+          window.location.href = "./lookup.html";
+        });
+      }
+    </script>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <a class="navbar-brand" href="../index.html"
         ><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"
